Fix slurm version 21.08 to be latest

--- a/template.yaml
+++ b/template.yaml
@@ -4,7 +4,7 @@ Description: Deploy an example Slurm headnode with the AWS plugin for Slurm (ver
 Parameters:
   SlurmPackageUrl:
     Type: String
-    Default: https://download.schedmd.com/slurm/slurm-21.08.6.tar.bz2
+    Default: https://download.schedmd.com/slurm/slurm-21.08-latest.tar.bz2
     Description: URL to the Slurm installation package. The filename must be like slurm-*.tar.bz2
 
   PluginPrefixUrl:
@@ -128,6 +128,8 @@ Resources:
               - Effect: Allow
                 Action: ec2:DescribeTags
                 Resource: '*'
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
 
   ComputeNodeInstanceProfile:
     Type: AWS::IAM::InstanceProfile
@@ -162,6 +164,8 @@ Resources:
               - Effect: Allow
                 Action: iam:PassRole
                 Resource: !GetAtt [ ComputeNodeRole, Arn ]
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
 
   HeadNodeInstanceProfile:
     Type: AWS::IAM::InstanceProfile
